# mass_sender

./: Cargo.toml  README.md  send_list.csv
src/: main.rs
